--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.7",
-    "firebase": "^9.22.2",
+    "firebase-admin": "^11.9.0",
     "ip-subnet-calculator": "^1.1.8",
     "random-avatar-generator": "^2.0.0",
     "random-name": "^0.1.2",
