--- a/package.json
+++ b/package.json
@@ -3,12 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "engines": {
-    "node": "16.x"
-  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon src/server.js"
+    "dev": "nodemon src/server.js"
   },
   "author": "",
   "license": "ISC",
@@ -16,8 +13,6 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.7",
-    "firebase-admin": "^11.9.0",
-    "ip-subnet-calculator": "^1.1.8",
     "random-avatar-generator": "^2.0.0",
     "random-name": "^0.1.2",
     "uid": "^2.0.2",
